[package]
name = "vnp4rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
libc = "0.2.175"
libloading = "0.8.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tonic = "0.12.3"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
p4runtime = { git = "https://github.com/p4lang/p4runtime.git" }

[build-dependencies]
bindgen = "0.72.1"
